...
import io.putdotio.android.files.FilesFolder
import io.putdotio.android.files.FilesRepository
import io.putdotio.android.files.mobileMessage
import java.text.NumberFormat

internal const val MOBILE_TRANSFERS_LIST_TAG = "mobile-transfers-list"
internal const val MOBILE_TRANSFER_ADD_FIELD_TAG = "mobile-transfer-add-field"
internal const val MOBILE_TRANSFERS_SNACKBAR_TAG = "mobile-transfers-snackbar"

@OptIn(ExperimentalMaterial3Api::class)
@Composable
internal fun MobileTransfersScreen(
    state: TransfersState,
...
